[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://experiments/herd_pathing/Agent.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 72.0

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[node name="Agent" type="KinematicBody2D"]
input_pickable = true
collision_layer = 2
script = ExtResource( 2 )

[node name="OtherAgentArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OtherAgentArea"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 3.0
default_color = Color( 1, 0.4, 0.4, 1 )
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="OtherAgentArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="OtherAgentArea" to="." method="_on_body_exited"]
